# 7d-diplomacy

./: TODO.md  pom.xml
backend/: pom.xml
backend/adjudication/: pom.xml
backend/adjudication/src/main/kotlin/nodomain/seven/dip/: Main.kt
backend/backend-for-frontend/: pom.xml
backend/backend-for-frontend/src/test/resources/: cato-test-orders.txt  pompey-test-orders.json  pompey-test-orders.txt
backend/src/main/kotlin/nodomain/seven/dip/: Main.kt
backend/src/main/kotlin/nodomain/seven/dip/adjudication/: Adjudicator.kt  (+1 more)
frontend/: .gitignore  Cargo.toml  Dioxus.toml
frontend/assets/: tailwind.css
frontend/assets/styling/: main.css  throbber.css
frontend/src/: main.rs  settings.rs
frontend/src/components/: main_menu.rs  mod.rs  resume_game_list.rs
frontend/src/utils/: mod.rs  persistence_desktop.rs
frontend/src/views/: game.rs  home.rs  host_new_game.rs  join_new_game.rs  mod.rs  navbar.rs  resume_game.rs
src/main/kotlin/: Main.kt
src/main/kotlin/nodomain/7dip/orders/: Orders.kt
src/main/kotlin/nodomain/7dip/provinces/: Provinces.kt
src/main/kotlin/nodomain/seven/dip/: Main.kt
src/main/kotlin/nodomain/seven/dip/adjudication/: Adjacency.kt  Adjudicator.kt  GameStateUpdate.kt
src/main/kotlin/nodomain/seven/dip/api/: GameResource.kt  User.kt  UserDao.kt
src/main/kotlin/nodomain/seven/dip/game/: Game.kt  GameDAO.kt  GameResource.kt
src/main/kotlin/nodomain/seven/dip/orders/: Input.kt  Order.kt  Orders.kt  Parse.kt  Piece.kt
src/main/kotlin/nodomain/seven/dip/provinces/: Adjacency.kt  ProvinceParsers.kt  Provinces.kt  Romans.kt
src/main/kotlin/nodomain/seven/dip/utils/: ComplexNumber.kt  Indexing.kt  RestApp.kt  UnprocessableEntryException.kt
src/test/kotlin/nodomain/7dip/orders/: OrderTest.kt
src/test/kotlin/nodomain/7dip/provinces/: Romans.kt
src/test/kotlin/nodomain/seven/dip/adjudication/: AdjudicatorTest.kt  DOTC.kt  IntegrationTest.kt
src/test/kotlin/nodomain/seven/dip/api/: GameResourceTest.kt
src/test/kotlin/nodomain/seven/dip/datc/: TestA.kt  TestC.kt  TestD.kt  TestE.kt  TestH.kt  TestI.kt  TestJ.kt  WithAssertionsDATC.kt  WithAssertionsDOTC.kt
src/test/kotlin/nodomain/seven/dip/dotc/: A.kt  TestA.kt  TestC.kt  WithAssertionsDOTC.kt
src/test/kotlin/nodomain/seven/dip/orders/: InputTest.kt  OrderTest.kt  ParseTest.kt
src/test/kotlin/nodomain/seven/dip/provinces/: ProvincesTest.kt  Romans.kt  StandardProvince.kt
(+42 files in other folders)
