[package]
name = "frontend-7d-diplomacy"
version = "0.1.0"
authors = ["Rua Fuller <ruafuller@gmail.com>", "LudoBC <ludobvw@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.6", features = ["router"] }
dioxus-motion = { version = "0.3.5", optional = true, default-features = false }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "dioxus-motion/web", "dioxus-motion/transitions"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop", "dioxus-motion/desktop", "dioxus-motion/transitions"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile", "dioxus-motion/desktop", "dioxus-motion/transitions"]
