[package]
name = "frontend-7d-diplomacy"
version = "0.1.0"
authors = ["Rua Fuller <ruafuller@gmail.com>", "LudoBC <ludobvw@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# frontend rendering stuff
dioxus = { version = "0.7.9", features = ["router"] }
# async stuff
tokio = { version = "1.52.3", features = ["time"] }
# json stuff
serde_json = "1.0"
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
